--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@ body {
 
 .header {
   background-color: var(--primary-color);
-  color: var(--light-text-color);
   padding: 1.5rem;
   text-align: center;
   border-bottom-left-radius: var(--border-radius);
@@ -37,9 +36,9 @@ body {
   box-shadow: var(--box-shadow);
 }
 
-.header h1 {
-  margin: 0;
-  font-size: 2.5rem;
+.header-logo {
+  max-width: 150px; /* justera efter behov */
+  height: auto;
 }
 
 .main-content {
